--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,29 +9,24 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  <header>
-    <nav class="be-red white large-padding">
-      <ul class="no-list row center-xs around-xs middle-xs">
-        <li class="col-md">
-          <h1 class = "no-margin">Aplication Blog</h1>
-        </li>
-        <li class="col-md">
-          <%= link_to "Inicio", root_path %>
-        </li>
-        <li class="col-md">
-          Diseño
-        </li>
-        <li class="col-md">
-          Programacion
-        </li>
-        <li class="col-md">
-          <%= link_to "Aricles", "../articles/index" %>
-        </li>
-        <li class="col-md">
-          Tecnologia
-        </li>
-      </ul>
-    </nav>
+
+  <header class="header">
+    <div class="container logo-navContanier">
+      <nav class="navigation">
+        <ul>
+          <li class="col-md opciones">
+            <%= link_to "Ruby", root_path %>
+          </li>
+          <li class="col-md opciones">
+            <%= link_to "Inicio", root_path %>
+          </li>
+          <li class="col-md opciones">
+            <%= link_to "Inicio", root_path %>
+          </li>
+        </ul>
+
+      </nav>
+    </div>
   </header>
 
   <body>
