--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Proyecto1</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <title>HOGARU</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="js/jquery-1.3.2.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/cufon-yui.js"></script>
+    <script type="text/javascript" src="js/arial.js"></script>
+    <script type="text/javascript" src="js/cuf_run.js"></script>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <header class="header">
-    <div class="container logo-navContanier">
-      <nav class="navigation">
+  <header>
+    <div class="search">
+      <div class="clr"></div>
+    </div>
+    <div class="clr"></div>
+    <div class="header">
+      <div class="logo">
+        <h1><a href="index.html"><span>HOGARU</span><small>Proyecto1</small></a></h1>
+      </div>
+      <div class="menu_nav">
         <ul>
-          <li class="col-md opciones">
-            <%= link_to "Ruby", root_path %>
+          <li class="active">
+            <%= link_to "Home", "../static_pages/home" %>
           </li>
-          <li class="col-md opciones">
-            <%= link_to "Inicio", root_path %>
+          <li class="active">
+            <%= link_to "Ruby", "../static_pages/Ruby" %>
           </li>
-          <li class="col-md opciones">
-            <%= link_to "Inicio", root_path %>
-          </li>
+          <li><a href="about.html">About Us</a></li>
         </ul>
-
-      </nav>
+        <div class="clr"></div>
+      </div>
+      <div class="clr"></div>
     </div>
   </header>
 
