--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,13 +31,16 @@
       <div class="menu_nav">
         <ul>
           <li class="active">
-            <%= link_to "Home", "../static_pages/home" %>
+            <%= link_to "Home", home_path %>
           </li>
           <li class="active">
-            <%= link_to "Ruby", "../static_pages/Ruby" %>
+            <%= link_to "Basics", basics_path %>
           </li>
           <li class="active">
-            <%= link_to "Git Actions", "../static_pages/git"%>
+            <%= link_to "Ruby", ruby_path %>
+          </li>
+          <li class="active">
+            <%= link_to "Git Actions", git_path %>
           </li>
         </ul>
         <div class="clr"></div>
