--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -423,6 +423,16 @@ thead th, tfoot th, tfoot td {
   border-radius: 10px;
   height: 220px;
 }
+.Section2{
+  background-color: #d9f1b5;
+  border-radius: 10px;
+  height: 220px;
+}
+.Section3{
+  background-color: #f1eeb5;
+  border-radius: 10px;
+  height: 220px;
+}
 .image{
   margin-top: 10px;
   border-radius: 10px;
