--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div class = "Section">
+    <div class = "Section2">
       <div class = "imagenBasics">
         <%= link_to image_tag("imagesPageHome/ruby_home.jpg", alt: "fondo image", width:"200", height: "200", class:"image"),
                     ruby_path %>
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <div class = "Section">
+    <div class = "Section3">
       <div class = "imagenBasics">
         <%= link_to image_tag("imagesPageHome/github_home.jpg", alt: "fondo image", width:"200", height: "200", class:"image"),
                     git_path %>
