Proyecto final actualizacion routes

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -419,7 +419,7 @@ thead th, tfoot th, tfoot td {
   margin-top: -20%;
 }
 .Section{
-  background-color: #b5ddf1;
+  background-color: #faabab;
   border-radius: 10px;
   height: 220px;
 }
@@ -429,7 +429,7 @@ thead th, tfoot th, tfoot td {
   height: 220px;
 }
 .Section3{
-  background-color: #f1eeb5;
+  background-color: #a1a19f;
   border-radius: 10px;
   height: 220px;
 }
