Proyecto fina correccion imagenes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,13 +4,12 @@
     <h6 class = "titulo_letra">
       Bienevnido a ruby on rails
     </h6>
-    <%= image_tag("imagesPageHome/Imagen_inicio.jpg", alt: "fondo image", width:"970", height: "400")
-                "https://rubyonrails.org/" %>
+    <div class="hbg"><%= link_to image_tag("imagesPageRuby/VideoPresentacion.gif", alt: "fondo image", width:"970", height: "294"),
+                                 "https://rubyonrails.org/" %></div>
   </div>
   <div class = "Section">
     <div class = "imagenBasics">
-      <%= image_tag("imagesPageHome/rootes_home.jpg", alt: "fondo image", width:"200", height: "200", class:"image")
-                 %>
+
     </div>
     <div class = textoBasic>
       <p class = "letraTexto">
@@ -28,8 +27,7 @@
 
   <div class = "Section2">
     <div class = "imagenBasics">
-      <%=image_tag("imagesPageHome/ruby_home.jpg", alt: "fondo image", width:"200", height: "200", class:"image")
-                  %>
+
     </div>
     <div class = textoBasic>
       <p class = "letraTexto">
@@ -48,8 +46,7 @@
 
   <div class = "Section3">
     <div class = "imagenBasics">
-      <%= image_tag("imagesPageHome/github_home.jpg", alt: "fondo image", width:"200", height: "200", class:"image")
-                  %>
+
     </div>
     <div class = textoBasic>
       <p class = "letraTexto">
