--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,11 +4,13 @@
     <h6 class = "titulo_letra">
       Bienevnido a ruby on rails
     </h6>
-    <div class="hbg"><%= link_to image_tag("imagesPageRuby/VideoPresentacion.gif", alt: "fondo image", width:"970", height: "294"),
+    <div class="hbg"><%= link_to image_tag("imagesPageHome/Imagen_inicio.jpg", alt: "fondo image", width:"970", height: "294"),
                                  "https://rubyonrails.org/" %></div>
   </div>
   <div class = "Section">
     <div class = "imagenBasics">
+      <div class="image_home"><%= link_to image_tag("imagesPageHome/rootes_home.jpg", alt: "fondo image", width:"970", height: "294"),
+                                   "https://rubyonrails.org/" %></div>
 
     </div>
     <div class = textoBasic>
