--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,9 +9,8 @@
   </div>
   <div class = "Section">
     <div class = "imagenBasics">
-      <div class="image_home"><%= link_to image_tag("imagesPageHome/rootes_home.jpg", alt: "fondo image", width:"970", height: "294"),
+      <div class="hbg"><%= link_to image_tag("imagesPageHome/rootes_home.jpg", alt: "fondo image", width:"970", height: "294"),
                                    "https://rubyonrails.org/" %></div>
-
     </div>
     <div class = textoBasic>
       <p class = "letraTexto">
