--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,94 +1,8 @@
 <body>
-<div class="main">
-  <div class="hbg"><%= link_to image_tag("imagesPageBasics/fondoPrincipal.png", alt: "fondo image", width:"970", height: "294"),
-                               "https://rubyonrails.org/" %></div>
-  <div class="content">
-    <div class="mainbar">
-      <div class="article">
-        <h2><span>¿Que es un resource?</span></h2>
-        <div class="clr"></div>
-        <%= link_to image_tag("imagesPageBasics/resource_images.png", alt: "resource image", width:"613", height: "294"),
-                    "https://rubyonrails.org/" %>
-        <p>REST es una forma particular de definir las rutas HTTP para hacer el CRUD de los modelos en nuestra aplicación Web</p>
-        <div class="clr"></div>
-      </div>
-      <div class="article">
-        <h2><span>Que se puede hacer un un RESTful routing</span></h2>
-        <div class="clr"></div>
-        <%= link_to image_tag("imagesPageBasics/restful_image.png", alt: "rest image", width:"613", height: "294"),
-                    "https://rubyonrails.org/" %>
-        <p>Como desarrollador de aplicaciones Rails, el estilo de desarrollo RESTful nos ayuda a
-          a tomar decisiones sobre qué controladores y acciones escribir: simplemente se estructura la
-          simplemente se estructura la aplicación mediante recursos que se crean, leen, actualizan y eliminan.</p>
-        <p class="spec"><a href="https://drive.google.com/file/d/1XyKAxTS-s_UWT5cadX17WLD7kjS9PwCC/view" class="rm fl">Read more</a></p>
-        <div class="clr"></div>
-      </div>
-      <div class="article">
-        <h2><span>Que es un restFull routing</span></h2>
-        <div class="clr"></div>
-        <%= link_to image_tag("imagesPageBasics/Http.png", alt: "http image", width:"613", height: "294"),
-                    "https://rubyonrails.org/" %>
-        <p>"REST", que es un acrónimo de REpresentational State Transfer.
-          REST es un estilo arquitectónico para desarrollar sistemas distribuidos y en red y
-          aplicaciones de software distribuidas y en red, como la World Wide Web y las aplicaciones web</p>
-        <p>Rails REST significa
-          que la mayoría de los componentes de la aplicación (como los usuarios y los microposts) se modelan como recursos que pueden ser creados, leídos, actualizados y eliminados, operaciones que se corresponden tanto con el
-          operaciones que se corresponden tanto con las operaciones CRUD de las bases de datos relacionales como con los cuatro métodos
-          mentales de HTTP: POST, GET, PATCH y DELETE.
-        </p>
-        <p class="spec"><a href="https://drive.google.com/file/d/1XyKAxTS-s_UWT5cadX17WLD7kjS9PwCC/view" class="rm fl">Read more</a></p>
-        <div class="clr"></div>
-      </div>
-    </div>
-    <div class="sidebar">
-      <div class="gadget">
-        <h2><span>Sidebar</span> Menu</h2>
-        <div class="clr"></div>
-        <ul class="sb_menu">
-          <li>
-            <%= link_to "Home", home_path %>
-          </li>
-          <li class="active">
-            <%= link_to "Basics", basics_path %>
-          </li>
-          <li>
-            <%= link_to "Ruby", ruby_path %>
-          </li>
-          <li>
-            <%= link_to "Git Actions", git_path %>
-          </li>
-        </ul>
-      </div>
-      <div class="gadget">
-        <h2><span>Que es ruby on rails?</span></h2>
-        <div class="clr"></div>
-        <p>Ruby on Rails, también conocido como RoR o Rails, es un framework de aplicaciones web de
-          código abierto escrito en el lenguaje de programación Ruby, siguiendo el paradigma del
-          patrón Modelo Vista Controlador.</p>
-        <h2><span>Que es ruby?</span></h2>
-        <div class="clr"></div>
-        <p>Ruby es un lenguaje de programación interpretado,
-          reflexivo y orientado a objetos, creado por el programador
-          japonés Yukihiro "Matz" Matsumoto, quien comenzó a
-          trabajar en Ruby en 1993, y lo presentó públicamente en 1995</p>
-      </div>
-    </div>
+  <div class = "main">
+    <h6 class = "titulo_letra">
+      Bienevnido a ruby on rails
+    </h6>
   </div>
-  <div class="clr"></div>
-</div>
-<div class="clr"></div>
-<div class="fbg">
-  <div class="col c3">
-    <h2><span>About</span></h2>
-    <p>Pagina de internet basada en el libro Ruby on rails en el cual se respone a diversas preguntas relacionadas con el tema a tratar <a href="https://drive.google.com/file/d/1XyKAxTS-s_UWT5cadX17WLD7kjS9PwCC/view">Learn more...</a></p>
-  </div>
-  <div class="clr"></div>
-</div>
-<div class="footer">
-  <p class="lf">HOGARU &copy; <a href="https://www.hogaru.com/hogares/?utm_source=google&utm_medium=cpc&utm_campaign=b2c_google_sab_agosto20&hct=B2C_Google_SAB_Ago20&hdt=&gclid=CjwKCAjwk6-LBhBZEiwAOUUDp6y6fgS6EhbOYa2G-DAkspnTiZ31YX5AbPtMkijHjg5aYJf0169RfxoCwcIQAvD_BwE">HOGARU</a>. Proyecto1 </p>
-  <p class="rf">Design by Juan Felipe Ruiz</p>
-  <p class="lf">Bibliografia &copy; <a href="https://drive.google.com/file/d/1XyKAxTS-s_UWT5cadX17WLD7kjS9PwCC/view">Ruby on rails</a>. Libro en donde se saco la informacion</p>
-  <div class="clr"></div>
-</div>
-</div>
+
 </body>
