--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,14 @@
     <h6 class = "titulo_letra">
       Bienevnido a ruby on rails
     </h6>
+    <%= link_to image_tag("imagesPageHome/Imagen_inicio.jpg", alt: "fondo image", width:"970", height: "400"),
+                "https://rubyonrails.org/" %>
+    <div class="Section">
+      <div class = "imagenBasics">
+        <%= link_to image_tag("imagesPageHome/rootes_home.jpg", alt: "fondo image", width:"200", height: "200", class:"image"),
+                    basics_path %>
+      </div>
+    </div>
   </div>
 
 </body>
