--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,8 +7,9 @@
                 "https://rubyonrails.org/" %>
     <div class="Section">
       <div class = "imagenBasics">
-        <%= link_to image_tag("imagesPageHome/rootes_home.jpg", alt: "fondo image", width:"200", height: "200", class:"image"),
-                    basics_path %>
+        <p>
+          hola aca estoy
+        </p>
       </div>
     </div>
   </div>
