Proyecto fina correccion imagenes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,14 +3,12 @@
     <h6 class = "titulo_letra">
       Bienevnido a ruby on rails
     </h6>
-    <%= link_to image_tag("imagesPageHome/Imagen_inicio.jpg", alt: "fondo image", width:"970", height: "400"),
-                "https://rubyonrails.org/" %>
+    <div><%= link_to image_tag("imagesPageHome/Imagen_inicio.jpg", alt: "fondo image", width:"970", height: "400"),
+                     "https://rubyonrails.org/" %></div>
     <div class="Section">
-      <div class = "imagenBasics">
-        <p>
-          hola aca estoy
-        </p>
-      </div>
+
+
+    </div>
     </div>
   </div>
 
