Proyecto fina correccion imagenes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
     <h6 class = "titulo_letra">
       Bienevnido a ruby on rails
     </h6>
-    <div class="hbg"><%= link_to image_tag("imagesPageBasics/fondoPrincipal.png", alt: "fondo image", width:"970", height: "294"),
+    <div class="hbg"><%= link_to image_tag("imagesPageHome/Imagen_inicio.jpg", alt: "fondo image", width:"970", height: "294"),
                                  "https://rubyonrails.org/" %></div>
     <div class="Section">
 
