Proyecto fina correccion imagenes

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -433,7 +433,7 @@ thead th, tfoot th, tfoot td {
   border-radius: 10px;
   height: 220px;
 }
-.image_home{
+.image{
   margin-top: 10px;
   border-radius: 10px;
 
