--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -441,3 +441,34 @@ thead th, tfoot th, tfoot td {
 .letraTexto{
   font:normal 20px Arial, Helvetica, sans-serif;
 }
+.clockdate-wrapper {
+  background-color: #575757;
+  padding:25px;
+  max-width:350px;
+  width:100%;
+  text-align:center;
+  border-radius:5px;
+  margin:0 auto;
+  margin-top:15%;
+}
+#clock{
+  background-color:#333;
+  font-family: sans-serif;
+  font-size:60px;
+  text-shadow:0px 0px 1px #fff;
+  color:#fff;
+}
+#clock span {
+  color: #000000;
+  text-shadow:0px 0px 1px #333;
+  font-size:30px;
+  position:relative;
+  top:-27px;
+  left:-10px;
+}
+#date {
+  letter-spacing:10px;
+  font-size:14px;
+  font-family:arial,sans-serif;
+  color:#fff;
+}
