--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <body>
 <div class = "titulo">
   <h6 class = "titulo_letra">
-    Bienevnido a ruby on rails
+    Bienvenido a ruby on rails
   </h6>
   <%= link_to image_tag("imagesPageHome/Imagen_inicio.jpg", alt: "fondo image", width:"970", height: "400"),
               "https://rubyonrails.org/" %>
@@ -63,7 +63,11 @@
     </p>
   </div>
 </div>
-
+<div id="clockdate">
+  <div class="clockdate-wrapper">
+    <h5><%= Time.now  %></h5>
+  </div>
+</div>
 </div>
 <div class="fbg">
   <div class="col c3">
@@ -78,4 +82,5 @@
   <p class="lf">Bibliografia &copy; <a href="https://drive.google.com/file/d/1XyKAxTS-s_UWT5cadX17WLD7kjS9PwCC/view">Ruby on rails</a>. Libro en donde se saco la informacion</p>
 </div>
 </div>
+<script src="reloj.js"></script>
 </body>
