Proyecto final Terminado Prueba2

--- a/app/views/static_pages/git.html.erb
+++ b/app/views/static_pages/git.html.erb
@@ -130,6 +130,19 @@
             </p>
           </li>
           <li>
+            <h5>Como hacer que no escriban en un proyecto remoto</h5>
+            <p>
+              Sencillemente en las configuraciones del git ,
+              se pone el proyecto en privado haciendo que nadie
+              pueda hacer algo en el
+            </p>
+            <p>
+              Otra opcion puede ser no agregar colaboradores al momento
+              de crear nuestro proyecto haciendo que seamos los unicos
+              que puedan podificar el proyecto
+            </p>
+          </li>
+          <li>
             <h5>git log</h5>
             <p>
               Este comando sirve para ver los commits que se han realizado
@@ -142,6 +155,24 @@
               Este comando se utiliza principalmente para ver las estadisticas
               de los commits que se han realizado
             </p>
+          </li>
+          <li>
+            <h5>He modificado dos archivos y quiero hacer un commit por cada uno de ellos,
+              cómo lo puedo hacer?</h5>
+            <p>
+              Este comando va reliacionado con el anterior punto
+            </p>
+            <p><strong>El comando git status</strong>
+              Este comando te va hacer mirar el estado de los commits
+            </p>
+            <%= link_to image_tag("imagesPageGit/git_commit_unarchivo.png", alt: "git_commit_unarchivo1 image", width:"500", height: "20"),
+                        "https://es.stackoverflow.com/questions/334302/es-posible-hacer-commit-a-un-archivo-especifico/334304" %>
+            <p><strong>El comando para hacer commit en un archivo</strong>
+              se hace el commit normal , al final de la setencia del comentario despues de las comillas
+              se agrega el nombre del archivo que aparece anteriormente con el git status
+            </p>
+            <%= link_to image_tag("imagesPageGit/git_commit_unarchivo2.png", alt: "git_commit_unarchivo2 image", width:"500", height: "20"),
+                        "https://es.stackoverflow.com/questions/334302/es-posible-hacer-commit-a-un-archivo-especifico/334304" %>
           </li>
         </ul>
         <div class="clr"></div>
