--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -436,6 +436,7 @@ thead th, tfoot th, tfoot td {
 .image{
   margin-top: 10px;
   border-radius: 10px;
+  transition: margin 0.5s ease-out;
 
 }
 .letraTexto{
