--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,3 @@
-<body>
 <div class = "titulo">
   <h6 class = "titulo_letra">
     Bienvenido a ruby on rails
@@ -63,9 +62,26 @@
     </p>
   </div>
 </div>
-<div id="clockdate">
-  <div class="clockdate-wrapper">
-    <h5><%= Time.now  %></h5>
+<div class = "wrap">
+  <div class = "widget">
+    <div class = "fecha">
+      <p id="diaSemana" class = "diaSemana fecha_letra"></p>
+      <p id="dia" class = "dia fecha_letra"></p>
+      <p>de</p>
+      <p id="mes" class = "mes fecha_letra"></p>
+      <p>de</p>
+      <p id="year" class = "year fecha_letra"></p>
+    </div>
+    <div class="reloj">
+      <p id="horas" class = "horas reloj_letra"></p>
+      <p>:</p>
+      <p id="minutos" class = "minutos reloj_letra"></p>
+      <p>:</p>
+      <div class ="caja-segundos">
+        <p id="ampm" class = "ampm segundos_letra"></p>
+        <p id="segundos" class = "segundos segundos_letra"></p>
+      </div>
+    </div>
   </div>
 </div>
 </div>
@@ -82,5 +98,3 @@
   <p class="lf">Bibliografia &copy; <a href="https://drive.google.com/file/d/1XyKAxTS-s_UWT5cadX17WLD7kjS9PwCC/view">Ruby on rails</a>. Libro en donde se saco la informacion</p>
 </div>
 </div>
-<script src="reloj.js"></script>
-</body>
