--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,6 @@
     <%= csp_meta_tag %>
     <title>HOGARU</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="js/jquery-1.3.2.min.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="js/cufon-yui.js"></script>
-    <script type="text/javascript" src="js/arial.js"></script>
-    <script type="text/javascript" src="js/cuf_run.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,5 +48,6 @@
 
   <body>
     <%= yield %>
+    <%= javascript_pack_tag 'static_pages' %>
   </body>
 </html>
