Correccion pagina Git parte2

--- a/app/views/static_pages/git.html.erb
+++ b/app/views/static_pages/git.html.erb
@@ -140,9 +140,19 @@
               como la de git
             </p>
             <p>
-              Usando el comando "git cimmit -m "comentario"" , se hace el commit
+              Usando el comando "git commit -m "comentario"" , se hace el commit
               ya luego el pus para la rama de heroku "git push heroku master" -aca se hace
               el push a heroku de la rama mater
+            </p>
+            <%= link_to image_tag("imagesPageGit/push_hroku.png", alt: "push_hroku image", width:"500", height: "150"),
+                        "https://www.it-swarm-es.com/es/git/heroku-y-github-al-mismo-tiempo/1070931693/" %>
+            <p>
+              <strong>git merge</strong>
+            </p>
+            <p>
+              Ahora bien usando el comando merge nos permite crear un nuevo
+              commit con la combinación de dos ramas
+              (la rama donde nos encontramos cuando ejecutamos el comando y la rama que indiquemos después del comando).
             </p>
             <%= link_to image_tag("imagesPageGit/push_hroku.png", alt: "push_hroku image", width:"500", height: "150"),
                         "https://www.it-swarm-es.com/es/git/heroku-y-github-al-mismo-tiempo/1070931693/" %>
