--- a/app/views/static_pages/git.html.erb
+++ b/app/views/static_pages/git.html.erb
@@ -154,7 +154,7 @@
               commit con la combinación de dos ramas
               (la rama donde nos encontramos cuando ejecutamos el comando y la rama que indiquemos después del comando).
             </p>
-            <%= link_to image_tag("imagesPageGit/push_hroku.png", alt: "push_hroku image", width:"500", height: "150"),
+            <%= link_to image_tag("imagesPageGit/git_merge.png", alt: "git_merge image", width:"500", height: "150"),
                         "https://www.it-swarm-es.com/es/git/heroku-y-github-al-mismo-tiempo/1070931693/" %>
           </li>
           <li>
