--- a/app/views/static_pages/git.html.erb
+++ b/app/views/static_pages/git.html.erb
@@ -1,14 +1,14 @@
 <body>
 <div class="main">
   <div class="hbg"><%= link_to image_tag("imagesPageGit/GitHub-Logo.jpg", alt: "fondo image", width:"970", height: "294"),
-                               "https://rubyonrails.org/" %></div>
+                               "https://docs.github.com/es" %></div>
   <div class="content">
     <div class="mainbar">
       <div class="article">
         <h2><span>¿Que es GitHub?</span></h2>
         <div class="clr"></div>
         <%= link_to image_tag("imagesPageGit/gitHub_1.png", alt: "gitHub1 image", width:"613", height: "150"),
-                    "https://rubyonrails.org/" %>
+                    "https://docs.github.com/es" %>
         <p>GitHub es una forja para alojar proyectos utilizando el
           sistema de control de versiones Git. Se utiliza principalmente
           para la creación de código fuente de programas de ordenador.
@@ -155,7 +155,7 @@
               (la rama donde nos encontramos cuando ejecutamos el comando y la rama que indiquemos después del comando).
             </p>
             <%= link_to image_tag("imagesPageGit/git_merge.png", alt: "git_merge image", width:"500", height: "150"),
-                        "https://www.it-swarm-es.com/es/git/heroku-y-github-al-mismo-tiempo/1070931693/" %>
+                        "https://platzi.com/clases/1557-git-github/19939-funcion-de-ramas-con-git-merge/?utm_source=google&utm_medium=cpc&utm_campaign=12915366154&utm_adgroup=&utm_content=&gclid=CjwKCAjw2bmLBhBREiwAZ6ugo9efwOg_aAz7f3ktQAjL-Xz-AqZ3zQGcOy1lF1rZscaJPNSIL8FPchoC3jEQAvD_BwE&gclsrc=aw.ds" %>
           </li>
           <li>
             <h5>git log</h5>
